Fixed homepage overflow issue

--- a/src/components/page/MarqueeList/marqueeList.scss
+++ b/src/components/page/MarqueeList/marqueeList.scss
@@ -5,6 +5,8 @@
 	margin: 0;
   position: relative;
   padding: 280px 0;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   @include breakpoint(lt-tablet) {
     padding: 185px 0;
